...
import androidx.compose.ui.Modifier
import androidx.compose.ui.graphics.vector.rememberVectorPainter
import androidx.compose.ui.platform.LocalFocusManager
import androidx.compose.ui.platform.testTag
import androidx.compose.ui.res.painterResource
import com.example.projectandroid2.ui.theme.basicMargin
const val TestTagInfoElementLocation = "TestTagInfoElementLocation"
@Composable
fun InfoElement(
    value: String?,
    label: String,
    leadingIcon: Int,
    onClick: () -> Unit,
...
