...
import com.example.projectandroid2.ui.elements.PlaceRow
import com.example.projectandroid2.ui.screens.listofcountries.TestTagListOfCountriesLazyList
import com.example.projectandroid2.ui.theme.basicMargin
import com.example.projectandroid2.utils.JSONUtils


const val TestTagButtonAddPlace = "TestTagButtonAddPlace"
const val TestTagListOfPLaces = "TestTagListOfPLaces"

@Composable
fun ListOfPlacesScreen(
    countryInfo:String,
    navigation:INavigationRouter
){
...
