...
import com.example.projectandroid2.ui.elements.MySearchBar
import com.example.projectandroid2.ui.elements.NoInternetConnection
import com.example.projectandroid2.utils.JSONUtils
import kotlinx.coroutines.ExperimentalCoroutinesApi


const val TestTagListOfCountriesLazyList = "TestTagListOfCountriesLazyList"


@ExperimentalCoroutinesApi
@RequiresApi(Build.VERSION_CODES.S)
@Composable
fun ListOfCountriesScreen(
...
